--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
         <div id="menu">
             <div id="foto"></div><br><br>
+            <button id="botaodark" onclick="document.body.classList.toggle('dark')"> luminosidade </button><br>
+            
             <div>
                 <a href="#quem sou eu"><h2>quem sou eu</h2></a>
                 <a href="#experiencia"><h2>experiencia</h2></a>
@@ -25,7 +27,7 @@
         </div>
 
         <div id="informacoes">
-            <div class="informacoes" id="quem sou eu"><h1>quem sou eu</h1></div>
+            <div class="informacoes" id="quem sou eu"><h1>quem sou eu</h1><img src="/icones/servico-de-ti.png" style="margin-left: 20px;"></div>
                 <div style="background-color: azure; border: solid rgba(255, 0, 0, 0); width: 80%;">
                     <p></p>
                     <p><strong>linguagens: </strong>JS, CSS, HTML.</p>
@@ -34,7 +36,7 @@
                     <p><strong></strong></p>
                     <p><strong></strong></p>
                 </div>
-            <div class="informacoes" id="experiencia"><h1>experiencia</h1></div>
+            <div class="informacoes" id="experiencia"><h1>experiencia</h1><img src="/icones/icon-for-experience-1.png" style="margin-left: 20px; width: 50px;"></div>
                 <div style="background-color: azure; border: solid rgba(255, 0, 0, 0); width: 80%;"></div>
             
             <div class="informacoes" id="projetos"><h1>projetos</h1></div>
