--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="informacoes" id="quem sou eu"><h1>quem sou eu</h1></div>
                 <div style="background-color: azure; border: solid rgba(255, 0, 0, 0); width: 80%;">
                     <p></p>
-                    <p><strong>linguagens: </strong>JS, CSS, HTML.</p>
+                    <p><strong>linguagens: </strong>JS, CSS, HTML, Electron.</p>
                     <p><strong>banco de dados: </strong>PostgreSQL</p>
                     <p><strong></strong></p>
                     <p><strong></strong></p>
