--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                 <a href="#contato"><h2>contato</h2></a>
                 <a href="#resume"><h2>resume</h2></a>
             </div>
+
+            <FIgure>
+                <img src="tecnology.png" style="width: 370px;">
+            </FIgure>
+
         </div>
 
         <div id="informacoes">
