--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             
             <div>
                 <a href="#quem sou eu"><h2>quem sou eu</h2></a>
-                <a href="#experiencia"><h2>experiencia</h2></a>
-                <a href="#projetos"><h2>projetos</h2></a>
                 <a href="#abilidades"><h2>abilidades</h2></a>
+                <a href="#experiencia"><h2>experiência</h2></a>
+                <a href="#projetos"><h2>projetos</h2></a>
                 <a href="#contato"><h2>contato</h2></a>
                 <a href="#resume"><h2>resume</h2></a>
             </div>
@@ -32,7 +32,7 @@
         </div>
 
         <div id="informacoes">
-            <div class="informacoes" id="quem sou eu"><h1>quem sou eu</h1></div>
+            <div class="informacoes" id="quem_sou_eu"><h1>quem sou eu</h1></div>
                 <div class="infodiv">
                     <p>olá, meu nome é <strong>wesllen dhenmyz brito ferreira</strong>, tenho um curso técnico completo de análise e desenvolvimento de sistemas</p>
                     <p>atualmente estou entrando na carreira de desenvolvedor full-stack, e estou atrás de oportunidades para aumentar meu portifólio começando por front-end</p>
@@ -47,7 +47,7 @@
                     <p><strong>banco de dados: </strong>PostgreSQL e SQLite</p>
                 </div>
 
-            <div class="informacoes" id="experiencia"><h1>experiencia</h1></div>
+            <div class="informacoes" id="experiencia"><h1>experiência</h1></div>
                 <div class="infodiv">
                     
                 </div>
